WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115021
Minor String usage fixes in WebCore/platform
https://bugs.webkit.org/show_bug.cgi?id=115021
Summary
Minor String usage fixes in WebCore/platform
Benjamin Poulain
Reported
2013-04-23 01:14:26 PDT
Minor String usage fixes in WebCore/platform
Attachments
Patch
(4.83 KB, patch)
2013-04-23 01:15 PDT
,
Benjamin Poulain
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2013-04-23 01:15:12 PDT
Created
attachment 199167
[details]
Patch
Benjamin Poulain
Comment 2
2013-04-23 14:24:09 PDT
Committed
r148993
: <
http://trac.webkit.org/changeset/148993
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug