Minor String usage fixes in WebCore/platform https://bugs.webkit.org/show_bug.cgi?id=115021

Reviewed by Andreas Kling.

Use ASCIILiteral when possible + minor fixes.

* platform/ContentType.cpp:
(WebCore::ContentType::codecs):
* platform/ContentType.h:
(ContentType):
* platform/Decimal.cpp:
(WebCore::Decimal::toString):
* platform/KURL.cpp:
(WebCore::KURL::setProtocol):


Canonical link: https://commits.webkit.org/133492@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148993 268f45cc-cd09-0410-ab3c-d52691b4dbfc