Source/WebCore/platform/ContentType.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2006, 2008 Apple Inc.  All rights reserved.
+ * Copyright (C) 2006, 2008, 2013 Apple Inc.  All rights reserved.
  * Copyright (C) 2008 Torch Mobile Inc. All rights reserved. (http://www.torchmobile.com/)
  * Copyright (C) 2009 Google Inc.  All rights reserved.
  *
@@ -78,13 +78,13 @@ String ContentType::type() const
 
 Vector<String> ContentType::codecs() const
 {
-    String codecsParameter = parameter("codecs");
+    String codecsParameter = parameter(ASCIILiteral("codecs"));
 
     if (codecsParameter.isEmpty())
         return Vector<String>();
 
     Vector<String> codecs;
-    codecsParameter.split(",", codecs);
+    codecsParameter.split(',', codecs);
     for (size_t i = 0; i < codecs.size(); ++i)
         codecs[i] = codecs[i].simplifyWhiteSpace();
 
