Source/WebCore/platform/Decimal.cpp
@@ -1,5 +1,6 @@
 /*
  * Copyright (C) 2012 Google Inc. All rights reserved.
+ * Copyright (C) 2013 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions are
@@ -945,10 +946,10 @@ String Decimal::toString() const
 {
     switch (m_data.formatClass()) {
     case EncodedData::ClassInfinity:
-        return sign() ? "-Infinity" : "Infinity";
+        return sign() ? ASCIILiteral("-Infinity") : ASCIILiteral("Infinity");
 
     case EncodedData::ClassNaN:
-        return "NaN";
+        return ASCIILiteral("NaN");
 
     case EncodedData::ClassNormal:
     case EncodedData::ClassZero:
@@ -956,7 +957,7 @@ String Decimal::toString() const
 
     default:
         ASSERT_NOT_REACHED();
-        return "";
+        return emptyString();
     }
 
     StringBuilder builder;
